// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContactItem /> Component redenrs correctly 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <tr
    className="contact__item"
>
    <td>
        98a59da4-9781-a957-b446-f27cb63e3b52
    </td>
    <td>
        Denis
    </td>
    <td>
        Becker
    </td>
    <td>
        0313 Aurelio Creek Apt. 778
    </td>
    <td>
        (642) 649-8274 x570
    </td>
    <td>
        Thad_Kerluke@yahoo.com
    </td>
    <td>
        <Link
            replace={false}
            style={
                Object {
                    "marginRight": "5px",
                  }
            }
            to="/98a59da4-9781-a957-b446-f27cb63e3b52/edit"
        >
            Edit
        </Link>
        <Link
            replace={false}
            to="/98a59da4-9781-a957-b446-f27cb63e3b52/delete"
        >
            Delete
        </Link>
    </td>
</tr>,
  "nodes": Array [
    <tr
      className="contact__item"
>
      <td>
            98a59da4-9781-a957-b446-f27cb63e3b52
      </td>
      <td>
            Denis
      </td>
      <td>
            Becker
      </td>
      <td>
            0313 Aurelio Creek Apt. 778
      </td>
      <td>
            (642) 649-8274 x570
      </td>
      <td>
            Thad_Kerluke@yahoo.com
      </td>
      <td>
            <Link
                  replace={false}
                  style={
                        Object {
                              "marginRight": "5px",
                            }
                  }
                  to="/98a59da4-9781-a957-b446-f27cb63e3b52/edit"
            >
                  Edit
            </Link>
            <Link
                  replace={false}
                  to="/98a59da4-9781-a957-b446-f27cb63e3b52/delete"
            >
                  Delete
            </Link>
      </td>
</tr>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <ContactItem
        address="0313 Aurelio Creek Apt. 778"
        email="Thad_Kerluke@yahoo.com"
        firstName="Denis"
        id="98a59da4-9781-a957-b446-f27cb63e3b52"
        lastName="Becker"
        phoneNumber="(642) 649-8274 x570"
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "address": "0313 Aurelio Creek Apt. 778",
          "email": "Thad_Kerluke@yahoo.com",
          "firstName": "Denis",
          "id": "98a59da4-9781-a957-b446-f27cb63e3b52",
          "lastName": "Becker",
          "phoneNumber": "(642) 649-8274 x570",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <tr
          className="contact__item"
>
          <td>
                    98a59da4-9781-a957-b446-f27cb63e3b52
          </td>
          <td>
                    Denis
          </td>
          <td>
                    Becker
          </td>
          <td>
                    0313 Aurelio Creek Apt. 778
          </td>
          <td>
                    (642) 649-8274 x570
          </td>
          <td>
                    Thad_Kerluke@yahoo.com
          </td>
          <td>
                    <Link
                              replace={false}
                              style={
                                        Object {
                                                  "marginRight": "5px",
                                                }
                              }
                              to="/98a59da4-9781-a957-b446-f27cb63e3b52/edit"
                    >
                              Edit
                    </Link>
                    <Link
                              replace={false}
                              to="/98a59da4-9781-a957-b446-f27cb63e3b52/delete"
                    >
                              Delete
                    </Link>
          </td>
</tr>,
        "_debugID": 2,
        "_renderedOutput": <tr
          className="contact__item"
>
          <td>
                    98a59da4-9781-a957-b446-f27cb63e3b52
          </td>
          <td>
                    Denis
          </td>
          <td>
                    Becker
          </td>
          <td>
                    0313 Aurelio Creek Apt. 778
          </td>
          <td>
                    (642) 649-8274 x570
          </td>
          <td>
                    Thad_Kerluke@yahoo.com
          </td>
          <td>
                    <Link
                              replace={false}
                              style={
                                        Object {
                                                  "marginRight": "5px",
                                                }
                              }
                              to="/98a59da4-9781-a957-b446-f27cb63e3b52/edit"
                    >
                              Edit
                    </Link>
                    <Link
                              replace={false}
                              to="/98a59da4-9781-a957-b446-f27cb63e3b52/delete"
                    >
                              Delete
                    </Link>
          </td>
</tr>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ContactItem
    address="0313 Aurelio Creek Apt. 778"
    email="Thad_Kerluke@yahoo.com"
    firstName="Denis"
    id="98a59da4-9781-a957-b446-f27cb63e3b52"
    lastName="Becker"
    phoneNumber="(642) 649-8274 x570"
/>,
}
`;

exports[`<ContactItem /> Component renders correctly 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <tr
    className="contact__item"
>
    <td>
        def433df-9c9a-eaff-cc91-66ff0dd4505b
    </td>
    <td>
        Vivien
    </td>
    <td>
        Romaguera
    </td>
    <td>
        7699 Abernathy Burg Apt. 462
    </td>
    <td>
        081-301-5588 x534
    </td>
    <td>
        Serenity22@hotmail.com
    </td>
    <td>
        <Link
            replace={false}
            style={
                Object {
                    "marginRight": "5px",
                  }
            }
            to="/def433df-9c9a-eaff-cc91-66ff0dd4505b/edit"
        >
            Edit
        </Link>
        <Link
            replace={false}
            to="/def433df-9c9a-eaff-cc91-66ff0dd4505b/delete"
        >
            Delete
        </Link>
    </td>
</tr>,
  "nodes": Array [
    <tr
      className="contact__item"
>
      <td>
            def433df-9c9a-eaff-cc91-66ff0dd4505b
      </td>
      <td>
            Vivien
      </td>
      <td>
            Romaguera
      </td>
      <td>
            7699 Abernathy Burg Apt. 462
      </td>
      <td>
            081-301-5588 x534
      </td>
      <td>
            Serenity22@hotmail.com
      </td>
      <td>
            <Link
                  replace={false}
                  style={
                        Object {
                              "marginRight": "5px",
                            }
                  }
                  to="/def433df-9c9a-eaff-cc91-66ff0dd4505b/edit"
            >
                  Edit
            </Link>
            <Link
                  replace={false}
                  to="/def433df-9c9a-eaff-cc91-66ff0dd4505b/delete"
            >
                  Delete
            </Link>
      </td>
</tr>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <ContactItem
        address="7699 Abernathy Burg Apt. 462"
        email="Serenity22@hotmail.com"
        firstName="Vivien"
        id="def433df-9c9a-eaff-cc91-66ff0dd4505b"
        lastName="Romaguera"
        phoneNumber="081-301-5588 x534"
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "address": "7699 Abernathy Burg Apt. 462",
          "email": "Serenity22@hotmail.com",
          "firstName": "Vivien",
          "id": "def433df-9c9a-eaff-cc91-66ff0dd4505b",
          "lastName": "Romaguera",
          "phoneNumber": "081-301-5588 x534",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <tr
          className="contact__item"
>
          <td>
                    def433df-9c9a-eaff-cc91-66ff0dd4505b
          </td>
          <td>
                    Vivien
          </td>
          <td>
                    Romaguera
          </td>
          <td>
                    7699 Abernathy Burg Apt. 462
          </td>
          <td>
                    081-301-5588 x534
          </td>
          <td>
                    Serenity22@hotmail.com
          </td>
          <td>
                    <Link
                              replace={false}
                              style={
                                        Object {
                                                  "marginRight": "5px",
                                                }
                              }
                              to="/def433df-9c9a-eaff-cc91-66ff0dd4505b/edit"
                    >
                              Edit
                    </Link>
                    <Link
                              replace={false}
                              to="/def433df-9c9a-eaff-cc91-66ff0dd4505b/delete"
                    >
                              Delete
                    </Link>
          </td>
</tr>,
        "_debugID": 2,
        "_renderedOutput": <tr
          className="contact__item"
>
          <td>
                    def433df-9c9a-eaff-cc91-66ff0dd4505b
          </td>
          <td>
                    Vivien
          </td>
          <td>
                    Romaguera
          </td>
          <td>
                    7699 Abernathy Burg Apt. 462
          </td>
          <td>
                    081-301-5588 x534
          </td>
          <td>
                    Serenity22@hotmail.com
          </td>
          <td>
                    <Link
                              replace={false}
                              style={
                                        Object {
                                                  "marginRight": "5px",
                                                }
                              }
                              to="/def433df-9c9a-eaff-cc91-66ff0dd4505b/edit"
                    >
                              Edit
                    </Link>
                    <Link
                              replace={false}
                              to="/def433df-9c9a-eaff-cc91-66ff0dd4505b/delete"
                    >
                              Delete
                    </Link>
          </td>
</tr>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ContactItem
    address="7699 Abernathy Burg Apt. 462"
    email="Serenity22@hotmail.com"
    firstName="Vivien"
    id="def433df-9c9a-eaff-cc91-66ff0dd4505b"
    lastName="Romaguera"
    phoneNumber="081-301-5588 x534"
/>,
}
`;
